crates/solidity/testing/snapshots/bindings_output/control/emit_event/v2/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected Equal or Semicolon.
   ╭─[input.sol:7:23]
   │
 7 │         emit TestEvent(x);
   │                       ─┬─  
   │                        ╰─── Error occurred here.
───╯

------------------------------------------------------------------------

Definitions (6):
- Def: #1 ["Test" @ input.sol:1:10] (contract)
- Def: #2 ["TestEvent" @ input.sol:2:11] (event)
- Def: #3 ["id" @ input.sol:2:25] (parameter, type: int256)
- Def: #4 ["test_emit" @ input.sol:4:14] (function, type: function () returns void)
- Def: #5 ["x" @ input.sol:5:13] (variable, type: int256)
- Def: #6 ["TestEvent" @ input.sol:7:14] (variable, type: unresolved)

------------------------------------------------------------------------

References (1):
- Ref: ["emit" @ input.sol:7:9] -> unresolved

------------------------------------------------------------------------

Unbound identifiers (0):

------------------------------------------------------------------------

Bindings: 
   ╭─[input.sol:1:1]
   │
 1 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 1
 2 │     event TestEvent(int id);
   │           ────┬────     ─┬  
   │               ╰───────────── name: 2
   │                          │  
   │                          ╰── name: 3
   │ 
 4 │     function test_emit() public {
   │              ────┬────  
   │                  ╰────── name: 4
 5 │         int x = 1;
   │             ┬  
   │             ╰── name: 5
   │ 
 7 │         emit TestEvent(x);
   │         ──┬─ ────┬────  
   │           ╰───────────── unresolved
   │                  │      
   │                  ╰────── name: 6
───╯
